# codaPlus-fastapi-ai-service

./: .dockerignore  .gitignore  Dockerfile  LLM.py  Makefile  app.py  docker-compose.yml  manage.py  mypi.ini  pyproject.toml  worker.py
DB/: chroma.py  mongo.py  pg.py  redis.py
base_model/: custom_loaders.py  custom_wrapper.py  remind_response.py  retrieval_chain.py  text_classifier.py  user_code_analysis.py  user_code_embeddings.py  user_feature_analysis.py  user_generate_summary.py  user_questioner_analysis.py  user_tone_detection.py  utils.py
base_model/RAG/: data_retrivel.py  ingest_data.py  utils.py
base_model/data_loader/: load_langchain_config.py  vector_store_retriever.py
base_model/prompts/: condense_prompt.yaml  config.yaml  few_shot_prompt.yaml  qa_prompt.yaml  qa_rule_prompt.yaml  supported_languages.yaml  user_chat_prompt.yaml
controllers/: chat_history.py  question_generator.py  solution.py
controllers/utils/: chats_controller.py  init_helepr.py  problems_controller.py
